# tour-platform

./: .gitignore  AGENTS.md  AUTO-MIGRATE-ANALYSIS.md  BACKFILL_ISSUE_7_SUMMARY.md  BRAND_BOOK.md  CLAUDE.md  FINAL_COMPLETION_STATUS.md  GITHUB_PR_GUIDE.md  MIGRATION-012-013-GUIDE.md  PR_BRAND_IDENTITY.md  PR_CREATION_GUIDE.md  PR_READY_TO_SUBMIT.md  README.md  SECURITY.md  TASK.md  apply_migrations.sh  auto-migrate-012-013.js  auto-migrate.js  auto-migrate.sh  execute-migrations-api.sh  execute-migrations.js  execute-migrations.sh  package-lock.json  package.json  tool.md  vercel.json
.claude/skills/open-seo-advisor/scripts/: pyproject.toml
.claude/skills/open-seo-advisor/scripts/seo_advisor/: __init__.py  _console_encoding.py  beginner_report.py  cli.py  cloudflare_cli.py  crawler.py  demo.py  encoding_utils.py  env_hints.py  errors.py  models.py  report.py  report_html.py  router.py  scan_runner.py  scoring.py  url_utils.py  wizard.py
.claude/skills/open-seo-advisor/scripts/tests/: test_ads.py  test_ads_bridge.py  test_autopilot.py  test_autopilot_safety_gate.py  test_beginner_report.py  test_cli_cpanel_source.py  test_cli_debug_safety.py  test_cli_fix_hreflang_generator.py  test_cli_fix_plan_only.py  test_cli_plugin_dev.py  test_cli_ssh_source.py  test_cloudflare_cli.py  test_cloudflare_connector.py  test_cloudflare_safety.py  test_cpanel_connector.py  test_cpanel_path_safety.py  test_crawler_scope.py  test_demo.py  test_ecommerce.py  test_encoding_utils.py  test_env_hints.py  test_fixers.py  test_fixers_plan_only.py  test_friendly_errors.py  test_git_repo_connector.py  test_growth.py  test_hreflang_generator.py  test_hreflang_map.py  test_hreflang_sitemap.py  test_http_connector.py  test_http_security.py  test_images.py  test_indexnow_cli.py  test_knowledge.py  (+39 more)
(+2736 files in other folders)
